# double_occurrence_words

./: CMakeLists.txt  README.md  assembly_number_2.cpp  main.cpp  table.txt  word.hpp
data/: 1.dot  1212.dot  122313.dot  12341234.dot  an_2_2.dot  an_4.dot  example_2.dot  graph.dot  input.txt  minimal_realization_1.dot  minimal_realization_2.dot  minimal_realization_3.dot  r_sp.txt  reducible_semi_palindrome.dot  semi_palindrome_an_2.dot  semi_palindrome_len_10_an_2.dot  semi_palindrome_len_11_an_3.dot  semi_palindrome_len_12_an_3.dot  semi_palindrome_len_13_an_3.dot  semi_palindrome_len_14_an_3.dot  semi_palindrome_len_15_an_3.dot  semi_palindrome_len_3_an_1.dot  semi_palindrome_len_4_an_1.dot  semi_palindrome_len_5_an_1.dot  semi_palindrome_len_6_an_2.dot  semi_palindrome_len_7_10.dot  semi_palindrome_len_7_11.dot  semi_palindrome_len_7_13.dot  semi_palindrome_len_7_14.dot  semi_palindrome_len_7_15.dot  semi_palindrome_len_7_18.dot  semi_palindrome_len_7_24.dot  semi_palindrome_len_7_25.dot  semi_palindrome_len_7_26.dot  semi_palindrome_len_7_28.dot  semi_palindrome_len_7_29.dot  semi_palindrome_len_7_30.dot  semi_palindrome_len_7_32.dot  semi_palindrome_len_7_4.dot  semi_palindrome_len_7_5.dot  (+6 more)
data/semi_palindromes_len_7/: semi_palindrome_len_7_0.dot  semi_palindrome_len_7_1.dot  semi_palindrome_len_7_12.dot  semi_palindrome_len_7_16.dot  semi_palindrome_len_7_17.dot  semi_palindrome_len_7_19.dot  semi_palindrome_len_7_2.dot  semi_palindrome_len_7_20.dot  semi_palindrome_len_7_21.dot  semi_palindrome_len_7_22.dot  (+7 more)
paper/: main.tex
presentation/: main.tex
